用Inflate方式成功实现了ViewPager
用Inflate方式成功实现了ViewPager，并且可以动态的修改所加载的内容，注意加载Layout中的具体控件的方法。例如：TextView
textView = (TextView)layoutView.findViewById(R.id.tv);

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ViewPagerInflate</string>
+    <string name="app_name">InflateViewPager</string>
 </resources>
